<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_movie"
            android:icon="@drawable/ic_movies"
            android:title="@string/title_menu_movies" />

    <item
            android:id="@+id/navigation_tv"
            android:icon="@drawable/ic_tv"
            android:title="@string/title_menu_tvshow" />

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/title_menu_favorite" />
</menu>
